CSS/index.css
/*-------*/
/*OVERALL*/
/*-------*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*--------*/
/*REUSABLE*/
/*-------*/

html,
body {
    font-family: Lato, Arial, sans-serif;
    background-color: #e1ddde;
    color: #3c3c3c;
}

.home {
    font-weight: 300;
    font-size: 22px;
}

nav {
    background-color: #3c3c3c;
    color: #e1ddde;
    padding: 0.5% 2%;
}

footer {
    height: auto;
    overflow: hidden;
    background-color: #3c3c3c;
    color: #e1ddde;
}

.home footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    z-index: 9999;
    font-size: 70%;
    padding: 0.5% 2%;
}

/*------*/
/*NAVBAR*/
/*-----*/

/*LOGO*/
.logo {
    height: 100px;
    width: auto;
    float: left;
}

/*HAMBURGER*/
.bi-list {
    color: #e1ddde;
    font-size: 200%;
    margin-top: 25px;
    border: none;
}

button {
    color: #3c3c3c;
}

.nav-item {
    text-align: center;
}

/*MAIN NAV*/
.main-nav {
    list-style: none;
    margin-top: 50px;
}

.main-nav li {
    display: inline-block;
    margin-left: 40px;
}

.main-nav li a:link,
.main-nav li a:visited{
    padding: 8px 0;
    color: #e1ddde;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 90%;
    border-bottom: 2px solid transparent;
    transition: border-bottom 0.2s;
}

.main-nav li a:hover,
.main-nav li a:active{
    border-bottom: 2px solid #B53471;
}

/*-------*/
/*FOOTER*/
/*------*/

.footer-text {
    float: left;
    list-style: none;
}

footer ul {
    margin: 0;
}

.footer-text li {
    display: inline-block;
    margin: 15px 10px 0px 20px;
}

footer li a:link,
footer li a:visited{
    padding: 8px 0;
    color: #e1ddde;
    text-decoration: none;
    text-transform: uppercase;
    border-bottom: 2px solid transparent;
    transition: border-bottom 0.2s;
}

footer li a:hover,
footer li a:active{
    border-bottom: 1px solid #B53471;
}

.social-links {
    list-style: none;
    float: right;
}

.social-links li {
    display: inline-block;
    margin: 15px 10px 0px 20px;
}

.social-links li a:link,
.social-links li:visited {
    text-decoration: none;
    border: none;
    color: #888;
    transition: color 0.2s;
}

.social-links li a:link,
.social-links li:visited {
    font-size: 160%;
}

.bi-facebook,
.bi-twitter,
.bi-instagram {
    transition: color 0.2s;
    color: #888;
}

.bi-facebook:hover,
.bi-facebook:active {
    color: #3b5998;
}

.bi-twitter:hover,
.bi-twitter:active {
    color: #55acee;
}

.bi-instagram:hover,
.bi-instagram:active {
    color: #bc2a8d;
}

/*------------*/
/*HOME STYLING*/
/*------------*/

.home {
    color: #e1ddde;
    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../images/HomeBackground.jpg);
    background-size: cover;
    background-position: center;
    height: 100vh;
    background-attachment: fixed;
    font-weight: 300;
}

.HomeText {
    position: absolute;
    max-width: 1140px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-transform: uppercase;
}

h1 {
    font-size: 200%;
}
.btn-light {
    background-color: #B53471;
    border: 1px solid #B53471;
    color: #e1ddde;
}

.btn-outline-light {
    border: 1px solid #B53471;
}

.btn:hover,
.btn:active {
    background-color: #B53471;
    border: 1px solid #e1ddde;
    color: #e1ddde;
}

/*-------*/
/*PRIVACY*/
/*-------*/

.privacy {
    width: 80%;
    margin: 150px auto;
    background-color: #e1ddde;
    color: #3c3c3c;
    border-radius: 15px;
    padding: 1%;
}

.privacy-title {
    text-align: center;
}

.privacy-text {
    text-align: left;
}


/*----------------*/
/*RESPONSIVE ITEMS*/
/*----------------*/

/*------------------------------------------------*/
/*Big tablets to 1200px(width smaller then 1140px row*/
/*------------------------------------------------*/

@media only screen and (max-width: 1200px) {
    .HomeText {
        width: 100%;
        padding: 0 2%;
    }

    .row {
        padding: 0 2%;
    }

    .footer-text ul{
        padding: 0;
    }
    .footer-text li {
        display: inline-block;
        margin: 15px 10px 0px 0px;
    }
}

/*------------------------------------------------*/
/*Small tablets to big tablet: from 768 to 1023px*/
/*------------------------------------------------*/

@media only screen and (max-width: 1023px) {
    .home {
        font-size: 18px;
    }

    footer {
        text-align: center;
        max-resolution: 5px;
        padding: 0;
    }
}

/*------------------------------------------------*/
/*Small phones to small tablets: from 481 to 767px*/
/*------------------------------------------------*/

@media only screen and (max-width: 767px) {
    .home {
        font-size: 16px;
    }

    .row,
    .HomeText {
        padding: 0 4%;
    }

    .col {
        width: 100%;
        margin: 0 0 4% 0;
    }
}

